--- a/locale/core.yml
+++ b/locale/core.yml
@@ -100,6 +100,15 @@ core:
       text: Configure the SMTP settings and addresses your forum will use to send email.
       username_label: => core.ref.username
 
+    # These translations are used in the sms page of the admin interface.
+    sms:
+      heading: => core.ref.sms
+      text: Configure the SMS settings your forum will use to send sms.
+      driver_label: Driver
+      twilio_heading: Twilio
+      twilio_verification_api_key: Verification API Key
+      submit_button: => core.ref.save_changes
+
     # These translations are used in the Extensions page.
     extensions:
       add_button: Add Extension
@@ -124,6 +133,8 @@ core:
       dashboard_text: Your forum at a glance.
       email_button: => core.ref.email
       email_text: "Configure your forum's email settings."
+      sms_button: => core.ref.sms
+      sms_text: "Configure your forum's SMS settings."
       extensions_button: Extensions
       extensions_text: Add extra functionality to your forum and make it your own.
       permissions_button: Permissions
@@ -176,18 +187,33 @@ core:
 
     # These translations are used in the Change Email modal dialog.
     change_email:
+      email_placeholder: => core.ref.email
       confirmation_message: => core.ref.confirmation_email_sent
       confirm_password_placeholder: => core.ref.confirm_password
       dismiss_button: => core.ref.okay
-      incorrect_password_message: The password you entered is incorrect.
+      incorrect_password_message: The current password you entered is incorrect.
       submit_button: => core.ref.save_changes
       title: => core.ref.change_email
 
+    # These translations are used in the Change Email modal dialog.
+    change_phone:
+      confirmation_message: => core.ref.confirmation_phone_changed
+      confirm_password_placeholder: => core.ref.confirm_password
+      dismiss_button: => core.ref.okay
+      incorrect_password_message: The current password you entered is incorrect.
+      submit_button: => core.ref.save_changes
+      verify_button: => core.ref.verify
+      title: => core.ref.change_phone
+
     # These translations are used in the Change Password modal dialog.
     change_password:
-      send_button: Send Password Reset Email
-      text: Click the button below and check your email for a link to change your password.
+      confirmation_message: "Your password has been changed successfully."
+      submit_button: => core.ref.save_changes
       title: => core.ref.change_password
+      old_password_placeholder: => core.ref.old_password
+      new_password_placeholder: => core.ref.new_password
+      dismiss_button: => core.ref.okay
+      incorrect_password_message: The current password you entered is incorrect.
 
     # These translations are used by the composer controls.
     composer:
@@ -254,13 +280,21 @@ core:
 
     # These translations are used in the Forgot Password modal dialog.
     forgot_password:
-      dismiss_button: => core.ref.okay
-      email_placeholder: => core.ref.email
-      email_sent_message: We've sent you an email containing a link to reset your password. Check your spam folder if you don't receive it within the next minute or two.
-      not_found_message: There is no user registered with that email address.
+      phone_placeholder: => core.ref.phone
+      phone_sent_message: We've sent a text message with a 6-digit verification code to reset your password.
+      not_found_message: There is no user registered with that phone number.
       submit_button: Recover Password
-      text: Enter your email address and we will send you a link to reset your password.
+      text: Enter your phone number and we will send you a 6-digit verification code to reset your password.
       title: Forgot Password
+
+    # These translations are used in the Reset Password modal dialog.
+    reset:
+      confirm_password_placeholder: => core.ref.confirm_password
+      password_placeholder: => core.ref.password
+      submit_button: Reset Password
+      title: => core.ref.reset_your_password
+      password_has_reset_message: "Your password has been reset successfully."
+      dismiss_button: => core.ref.okay
 
     # These translations are used in the header and session dropdown menu.
     header:
@@ -300,6 +334,7 @@ core:
       submit_button: => core.ref.log_in
       title: => core.ref.log_in
       username_or_email_placeholder: Username or Email
+      username_or_phone_or_email_placeholder: Username, Phone or Email
 
     # These translations are used by the Notifications dropdown, a.k.a. "the bell".
     notifications:
@@ -352,6 +387,7 @@ core:
     settings:
       account_heading: Account
       change_email_button: => core.ref.change_email
+      change_phone_button: => core.ref.change_phone
       change_password_button: => core.ref.change_password
       notifications_heading: => core.ref.notifications
       notify_by_email_heading: => core.ref.email
@@ -368,6 +404,7 @@ core:
       log_in_text: "Already have an account? <a>Log In</a>"
       password_placeholder: => core.ref.password
       submit_button: => core.ref.sign_up
+      next_button: => core.ref.next_step
       title: => core.ref.sign_up
       username_placeholder: => core.ref.username
       welcome_text: "Welcome, {username}!"
@@ -428,6 +465,258 @@ core:
       three_text: "{first}, {second}, and {third}"
       two_text: "{first} and {second}"
 
+    phone_verification:
+      phone_number_placeholder: => core.ref.phone_number
+      verification_code_placeholder: => core.ref.verification_code
+      verification_text: For your security, we wants to make sure it’s really you. We will send a text message with a 6-digit verification code.
+      verification_message_sent_message: "The Verification message has send to {phone}."
+
+    countries:
+      af: Afghanistan
+      al: Albania
+      dz: Algeria
+      as: American Samoa
+      ad: Andorra
+      ao: Angola
+      ai: Anguilla
+      aq: Antarctica
+      ag: Antigua & Barbuda
+      ar: Argentina
+      am: Armenia
+      aw: Aruba
+      au: Australia
+      at: Austria
+      az: Azerbaijan
+      bs: Bahamas
+      bh: Bahrain
+      bd: Bangladesh
+      bb: Barbados
+      by: Belarus
+      be: Belgium
+      bz: Belize
+      bj: Benin
+      bm: Bermuda
+      bt: Bhutan
+      bo: Bolivia
+      ba: Bosnia & Herzegovina
+      bw: Botswana
+      br: Brazil
+      io: British Indian Ocean Territory
+      vg: British Virgin Islands
+      bn: Brunei
+      bg: Bulgaria
+      bf: Burkina Faso
+      bi: Burundi
+      kh: Cambodia
+      cm: Cameroon
+      ca: Canada
+      cv: Cape Verde
+      ky: Cayman Islands
+      cf: Central African Republic
+      td: Chad
+      cl: Chile
+      cn: China
+      cx: Christmas Island
+      cc: Cocos Islands
+      co: Colombia
+      km: Comoros
+      cg: Congo - Brazzaville
+      cd: Congo - Kinshasa
+      ck: Cook Islands
+      cr: Costa Rica
+      hr: Croatia
+      cu: Cuba
+      cw: Curacao
+      cy: Cyprus
+      cz: Czech Republic
+      dk: Denmark
+      dj: Djibouti
+      dm: Dominica
+      do: Dominican Republic
+      tl: East Timor
+      ec: Ecuador
+      eg: Egypt
+      sv: El Salvador
+      gq: Equatorial Guinea
+      er: Eritrea
+      ee: Estonia
+      et: Ethiopia
+      fk: Falkland Islands
+      fo: Faroe Islands
+      fj: Fiji
+      fi: Finland
+      fr: France
+      gf: French Guiana
+      pf: French Polynesia
+      ga: Gabon
+      gm: Gambia
+      ge: Georgia
+      de: Germany
+      gh: Ghana
+      gi: Gibraltar
+      gr: Greece
+      gl: Greenland
+      gd: Grenada
+      gp: Guadeloupe
+      gu: Guam
+      gt: Guatemala
+      gg: Guernsey
+      gn: Guinea
+      gw: Guinea-Bissau
+      gy: Guyana
+      ht: Haiti
+      hn: Honduras
+      hk: Hong Kong
+      hu: Hungary
+      is: Iceland
+      in: India
+      id: Indonesia
+      int: International
+      ir: Iran
+      iq: Iraq
+      ie: Ireland
+      im: Isle of Man
+      il: Israel
+      it: Italy
+      ci: Ivory Coast
+      jm: Jamaica
+      jp: Japan
+      je: Jersey
+      jo: Jordan
+      kz: Kazakhstan
+      ke: Kenya
+      ki: Kiribati
+      xk: Kosovo
+      kw: Kuwait
+      kg: Kyrgyzstan
+      la: Laos
+      lv: Latvia
+      lb: Lebanon
+      ls: Lesotho
+      lr: Liberia
+      ly: Libya
+      li: Liechtenstein
+      lt: Lithuania
+      lu: Luxembourg
+      mo: Macau
+      mk: Macedonia
+      mg: Madagascar
+      mw: Malawi
+      my: Malaysia
+      mv: Maldives
+      ml: Mali
+      mt: Malta
+      mh: Marshall Islands
+      mq: Martinique
+      mr: Mauritania
+      mu: Mauritius
+      yt: Mayotte
+      mx: Mexico
+      fm: Micronesia
+      md: Moldova
+      mc: Monaco
+      mn: Mongolia
+      me: Montenegro
+      ms: Montserrat
+      ma: Morocco
+      mz: Mozambique
+      mm: Myanmar
+      na: Namibia
+      nr: Nauru
+      np: Nepal
+      nl: Netherlands
+      an: Netherlands Antilles
+      nc: New Caledonia
+      nz: New Zealand
+      ni: Nicaragua
+      ne: Niger
+      ng: Nigeria
+      nu: Niue
+      kp: North Korea
+      mp: Northern Mariana Islands
+      no: Norway
+      om: Oman
+      pk: Pakistan
+      pw: Palau
+      ps: Palestine
+      pa: Panama
+      pg: Papua New Guinea
+      py: Paraguay
+      pe: Peru
+      ph: Philippines
+      pn: Pitcairn
+      pl: Poland
+      pt: Portugal
+      pr: Puerto Rico
+      qa: Qatar
+      re: Reunion
+      ro: Romania
+      ru: Russia
+      rw: Rwanda
+      ws: Samoa
+      sm: San Marino
+      st: Sao Tome & Príncipe
+      sa: Saudi Arabia
+      sn: Senegal
+      rs: Serbia
+      sc: Seychelles
+      sl: Sierra Leone
+      sg: Singapore
+      sx: Sint Maarten
+      sk: Slovakia
+      si: Slovenia
+      sb: Solomon Islands
+      so: Somalia
+      za: South Africa
+      kr: South Korea
+      ss: South Sudan
+      es: Spain
+      lk: Sri Lanka
+      bl: St. Barthelemy
+      sh: St. Helena
+      kn: St. Kitts & Nevis
+      lc: St. Lucia
+      mf: St. Martin
+      pm: St. Pierre & Miquelon
+      vc: St. Vincent & Grenadines
+      sd: Sudan
+      sr: Suriname
+      sj: Svalbard & Jan Mayen
+      sz: Swaziland
+      se: Sweden
+      ch: Switzerland
+      sy: Syria
+      tw: Taiwan
+      tj: Tajikistan
+      tz: Tanzania
+      th: Thailand
+      tg: Togo
+      tk: Tokelau
+      to: Tonga
+      tt: Trinidad & Tobago
+      tn: Tunisia
+      tr: Turkey
+      tm: Turkmenistan
+      tc: Turks & Caicos Islands
+      tv: Tuvalu
+      vi: U.S. Virgin Islands
+      ug: Uganda
+      ua: Ukraine
+      ae: United Arab Emirates
+      gb: United Kingdom
+      us: United States
+      uy: Uruguay
+      uz: Uzbekistan
+      vu: Vanuatu
+      va: Vatican
+      ve: Venezuela
+      vn: Vietnam
+      wf: Wallis & Futuna
+      eh: Western Sahara
+      ye: Yemen
+      zm: Zambia
+      zw: Zimbabwe
+
   # Translations in this namespace are used in views other than Flarum's normal JS client.
   views:
 
@@ -457,6 +746,10 @@ core:
   # Translations in this namespace are used in messages output by the API.
   api:
     invalid_username_message: "The username may only contain letters, numbers, and dashes."
+    invalid_phone_message:　"This phone cannot be used for verification."
+    failed_send_verification_code_message: "Failed to send verification code, please try again."
+    invalid_verification_code_message: This verification code is invalid.
+    phone_not_verified_message: This phone is not verified.
 
   # Translations in this namespace are used in emails sent by the forum.
   email:
@@ -508,14 +801,20 @@ core:
   ref:
     all_discussions: All Discussions
     change_email: Change Email
+    change_phone: Change Phone
     change_password: Change Password
     confirm_password: Confirm Password
     confirmation_email_sent: "We've sent a confirmation email to {email}. If it doesn't arrive soon, check your spam folder."
+    confirmation_phone_changed: "Your phone number has been changed to {country_code} {phone_number}."
     delete: Delete
     delete_forever: Delete Forever
     discussions: Discussions
     edit: Edit
     email: Email
+    sms: SMS
+    phone: Phone
+    verification_code: Verification Code
+    phone_number: Phone number
     load_more: Load More
     log_in: Log In
     log_out: Log Out
@@ -536,6 +835,10 @@ core:
     username: Username
     write_a_reply: Write a Reply...
     you: You                                     # Referenced by flarum-likes.yml, flarum-mentions.yml
+    next_step: Next
+    old_password: Current Password
+    new_password: New Password
+    verify: Verify
 
   ##
   # GROUP NAMES - These keys are translated at the back end.
@@ -551,3 +854,4 @@ core:
     members: Members
     mod: Mod
     mods: Mods
+
