--- a/locale/validation.yml
+++ b/locale/validation.yml
@@ -75,11 +75,12 @@ validation:
     password: password
     email: email
     phone: phone
-    phone_number: phone number
-    verification_code: verification code
+    phoneNumber: phone number
+    verificationCode: verification code
     title: title
     content: content
     name_singular: singular name
     name_plural: plural name
     tag_count_primary: number of primary tags
     tag_count_secondary: number of secondary tags
+    recaptchaResponse: reCAPTCHA
